# NMA-cake

./: LICENSE.md  README.md  pyproject.toml
Lessons Summary/: W1D2_data.npz  W1Summary.ipynb
Project/: discover_the_data.ipynb  load_steinmetz_decisions.ipynb
Project/code/: SNN.py  discover_data_by-R.R  final_model.py  final_model_fix.py
