[tool.poetry]
name = "nma_cake"
version = "0.1.0"
description = "What I learnt from NeuroMatch Academy"
authors = ["Xiaokai Xia <dddd1007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.0"
numpy = "^1.19.0"
pandas = "^1.0.5"
scipy = "^1.5.1"
matplotlib = "^3.3.0"
ipywidgets = "^7.5.1"
seaborn = "^0.10.1"
torch = "^1.5.1"
bindsnet = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
